fix: image and alignment issues

--- a/src/css/1-pages/dashboard.scss
+++ b/src/css/1-pages/dashboard.scss
@@ -8,7 +8,10 @@
     &-projects {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: 1fr;
         gap: 24px;
+        align-items: stretch;
+        height: 320px;
     }
 
     &-separator {
@@ -27,9 +30,5 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    &-new {
-        height: 280px;
     }
 }
